test(TOOLS-6352): stan-v2 fix spec and all code
