# src/stan/stan.routes.js
@@ -1,12 +1,11 @@
 const router = require('express').Router();
 const controller = require('./stan.controller');
 
-router.get('/v1/AL/VkL', controller.getAlVkl);
-router.delete('/v1/AL/VkL/:shortName', controller.deleteAlVklByShortName);
+router.get('/v2/Kutty', controller.getKutty);
+router.get('/v2/Kutty/Kutty/:id', controller.getKuttyById);
 
-router.get('/v1/Kutty', controller.getKutty);
-router.get('/v1/Kutty/Id/:id', controller.getKuttyById);
-router.get('/v1/Kutty/ShortName/:shortName', controller.getKuttyByShortName);
+router.get('/v2/Witty', controller.getWitty);
+router.get('/v2/Witty/Witty/:id', controller.getWittyById);
 
 router.get('/health', controller.health);
 
